_includes/manuals/1.6/5.2.4_cr_gce.md
* Requires client e-mail address of an authorised google cloud console client ID is entered in the new compute resource screen and its associated .p12 private key file is manually transferred to the foreman server. 
* The certificate must be stored in a location the foreman user account has permission to read.
* If your server enforces SELinux ensure the context is suitable or relabel it using restorecon -vv /usr/share/foreman/yourkey.p12 to  
* Specify the location *on the foreman server* as the certificate path value e.g /usr/share/foreman/yourkey.p12
* Ensure images are associated under the *Images* tab on the compute resource.
* Add a provisioning template of type *finish* which will be executed over SSH on the new image.
* Ensure the finish template is associated to the OS (on the *Associations* tab) and is set as the default for the operating system too.
* Enabling *use_uuid_for_certificates* in *Administer > Settings* is recommended for consistent Puppet certificate IDs instead of hostnames.
* The *External IP* checkbox means the public IP address (rather than private IP) will be used for communication with the instance from Foreman.

