_includes/manuals/1.8/5.2.4_cr_gce.md
* Requires client e-mail address of an authorised Google Cloud Console client ID is entered in the new compute resource screen and its associated .p12 private key file is manually transferred to the foreman server. 
* The certificate must be stored in a location the foreman user account has permission to read.
* If your server enforces SELinux ensure the context is suitable or relabel it using restorecon -vv /usr/share/foreman/gce.p12
* Specify the location *on the foreman server* as the certificate path value e.g /usr/share/foreman/gce.p12
* Ensure images are associated under the *Images* tab on the compute resource.
* Add a provisioning template of type *finish* which will be executed over SSH on the new image.
* Ensure the finish template is associated to the OS (on the *Associations* tab) and is set as the default for the operating system too.
* Enabling *use_uuid_for_certificates* in *Administer > Settings* is recommended for consistent Puppet certificate IDs instead of hostnames.
* The *External IP* checkbox means the public IP address (rather than private IP) will be used for communication with the instance from Foreman.

#### Setting up the cloud project

All Google Compute Engine access is contained within a "project" set up via the Google Developers Console.  Access [the Google Developers Console](https://console.developers.google.com/), and click *Create Project*.

![Create Project](/static/images/screenshots/gce/create_project.png)

In the project settings, enable the Compute Engine feature by clicking one of the sections below *Compute Engine* in the left hand pane.  This will trigger an initialization job.

![Initializing Compute Engine](/static/images/screenshots/gce/enable_compute.png)

Next, under *APIs &amp; auth*, then *APIs*, click the *Enable API* button.

![Enable API](/static/images/screenshots/gce/enable_api.png)

Under *Credentials*, click *Create new Client ID* in the OAuth section and select *Service account* in the popup box.  A new account will be created for Foreman to use.

![Service account](/static/images/screenshots/gce/create_account.png)

Click *Generate new P12 key* and save the new .p12 file.  This should be uploaded to the Foreman server to a location that the 'foreman' user can read, such as `/usr/share/foreman/gce.p12`.

<div class="alert alert-info">Change the .p12 file owner to 'foreman' and chmod 0600 for security.  If your server uses SELinux ensure the context is suitable or relabel it using restorecon -vv /usr/share/foreman/gce.p12</div>

#### Adding the compute resource

In Foreman, under *Infrastructure > Compute resources > New compute resource*, select *Google* from the provider dropdown menu and fill in the GCE-specific fields as follows:

* *Google Project ID:* shown on the project overview page in the GCE console, e.g. "nomadic-rite-396"
* *Client Email:* shown on the *Credentials* page after creating the service account as *Email address*, e.g. "543...@developer.gserviceaccount.com"
* *Certificate path:* full path of the .p12 file stored on the Foreman server, e.g. /usr/share/foreman/gce.p12
